--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@coral-xyz/anchor": "^0.27.0",
+    "@cyclic.sh/dynamodb": "^0.0.33",
+    "@solana/web3.js": "^1.76.0",
     "lottie-web": "^5.10.1",
     "ngx-lottie": "^10.0.0",
     "rxjs": "~7.8.0",
