--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@solana/web3.js": "^1.76.0",
     "lottie-web": "^5.10.1",
     "ngx-lottie": "^10.0.0",
-    "rxjs": "~7.8.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^16.0.1",
     "@angular/cli": "~15.1.1",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
