--- a/static/package.json
+++ b/static/package.json
@@ -10,21 +10,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/cdk": "^15.1.0",
-    "@angular/common": "^15.1.0",
-    "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
-    "@angular/material": "^15.1.0",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@coral-xyz/anchor": "^0.27.0",
     "@cyclic.sh/dynamodb": "^0.0.33",
-    "@solana/web3.js": "^1.76.0",
-    "lottie-web": "^5.10.1",
-    "ngx-lottie": "^10.0.0",
-    "zone.js": "~0.12.0"
+    "@solana/web3.js": "^1.76.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
