--- a/static/package.json
+++ b/static/package.json
@@ -2,7 +2,7 @@
   "name": "sly",
   "version": "0.0.0",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
   },
   "private": true,
   "dependencies": {
